--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       - name: "[Setup] JFrog CLI"
         uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
         with:
-          version: latest
+          version: 2.78.9
           oidc-provider-name: bookverse-recommendations-github
           oidc-audience: ${{ vars.JFROG_URL }}
           disable-job-summary: true
@@ -608,7 +608,7 @@ jobs:
       - name: "[Setup] JFrog CLI"
         uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
         with:
-          version: latest
+          version: 2.78.9
         env:
           JFROG_CLI_BUILD_NAME: ${{ needs.build-test-publish.outputs.build_name }}
           JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
