--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -380,7 +380,7 @@ jobs:
           source bookverse-infra/libraries/bookverse-devops/scripts/evidence-lib.sh
           
           # Set package-specific environment variables  
-          export PACKAGE_NAME="recommendations-config"
+          export PACKAGE_NAME="recommendations-config-$CONFIG_VERSION.tar.gz"
           export PACKAGE_VERSION="$CONFIG_VERSION"
           
           # Attach generic package evidence
@@ -421,7 +421,7 @@ jobs:
           source bookverse-infra/libraries/bookverse-devops/scripts/evidence-lib.sh
           
           # Set package-specific environment variables
-          export PACKAGE_NAME="recommendations-resources"
+          export PACKAGE_NAME="recommendations-resources-$RESOURCES_VERSION.tar.gz"
           export PACKAGE_VERSION="$RESOURCES_VERSION"
           
           # Attach generic package evidence
