--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -329,84 +329,6 @@ jobs:
           echo "DOCKER_BUILD_PUSH_STATUS=SUCCESS" >> $GITHUB_ENV
           echo "✅ Built and pushed Docker image (OIDC docker push + build-info)"
 
-      - name: "🐛 [DEBUG] Evidence Authentication Test"
-        run: |
-          echo "🔍 DEBUGGING EVIDENCE AUTHENTICATION - Manual Testing"
-          echo "=================================================="
-          
-          # Test 1: Check what we have available
-          echo ""
-          echo "🔧 Test 1: Environment Variables"
-          echo "EVIDENCE_KEY_ALIAS from GitHub var: '${{ vars.EVIDENCE_KEY_ALIAS }}'"
-          echo "EVIDENCE_PRIVATE_KEY available: $([ -n '${{ secrets.EVIDENCE_PRIVATE_KEY }}' ] && echo 'YES' || echo 'NO')"
-          echo "PROJECT_KEY: '${{ vars.PROJECT_KEY }}'"
-          
-          # Test 2: Check JFrog CLI authentication
-          echo ""
-          echo "🔧 Test 2: JFrog CLI Status"
-          jf config show
-          
-          # Test 3: Test evidence creation with minimal example
-          echo ""
-          echo "🔧 Test 3: Minimal Evidence Creation Test"
-          echo '{"test": "debug", "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"}' > debug-test.json
-          
-          echo "Command to execute:"
-          echo "jf evd create-evidence \\"
-          echo "  --predicate debug-test.json \\"
-          echo "  --predicate-type \"https://debug.test/v1\" \\"
-          echo "  --package-name \"debug-test\" \\"
-          echo "  --package-version \"1.0.0\" \\"
-          echo "  --package-repo-name \"bookverse-recommendations-internal-docker-nonprod-local\" \\"
-          echo "  --project \"${{ vars.PROJECT_KEY }}\" \\"
-          echo "  --provider-id github-actions \\"
-          echo "  --key \"\${{ secrets.EVIDENCE_PRIVATE_KEY }}\" \\"
-          echo "  --key-alias \"\${{ vars.EVIDENCE_KEY_ALIAS }}\""
-          
-          echo ""
-          echo "🚀 Executing minimal evidence creation..."
-          jf evd create-evidence \
-            --predicate debug-test.json \
-            --predicate-type "https://debug.test/v1" \
-            --package-name "debug-test" \
-            --package-version "1.0.0" \
-            --package-repo-name "bookverse-recommendations-internal-docker-nonprod-local" \
-            --project "${{ vars.PROJECT_KEY }}" \
-            --provider-id github-actions \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
-            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "❌ FAILED"
-          
-          # Test 4: Try without some parameters to see what's required
-          echo ""
-          echo "🔧 Test 4: Evidence Creation Without Package Repo"
-          jf evd create-evidence \
-            --predicate debug-test.json \
-            --predicate-type "https://debug.test/v2" \
-            --package-name "debug-test-2" \
-            --package-version "1.0.0" \
-            --project "${{ vars.PROJECT_KEY }}" \
-            --provider-id github-actions \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
-            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "❌ FAILED (Expected)"
-          
-          # Test 5: Compare with working checkout pattern
-          echo ""
-          echo "🔧 Test 5: Release Bundle Evidence Test (should work)"
-          echo '{"test": "release-bundle", "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"}' > debug-rb.json
-          
-          jf evd create-evidence \
-            --predicate debug-rb.json \
-            --predicate-type "https://debug.test/rb/v1" \
-            --release-bundle "test-rb" \
-            --release-bundle-version "1.0.0" \
-            --project "${{ vars.PROJECT_KEY }}" \
-            --provider-id github-actions \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
-            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "❌ Release bundle test FAILED"
-          
-          echo ""
-          echo "🔍 End of debug tests"
-
       - name: "[Evidence] API Image Package Evidence"
         run: |
           echo "📊 Generating evidence for API image package"
@@ -415,8 +337,7 @@ jobs:
           export PACKAGE_NAME="recommendations"
           export PACKAGE_VERSION="$RECOMMENDATIONS_VERSION"
           
-          # Generate evidence using direct JFrog CLI with working syntax (no shared library)
-          echo "📊 Creating pytest evidence with direct JFrog CLI..."
+          echo "📊 Creating pytest evidence..."
           
           # Create pytest evidence predicate
           jq -n \
@@ -453,8 +374,7 @@ jobs:
               }
             }' > sast-scan.json
 
-          # Create evidence using direct JFrog CLI (proven working pattern)
-          echo "✅ Creating pytest evidence with direct GitHub variable syntax..."
+          echo "✅ Creating pytest evidence..."
           jf evd create-evidence \
             --predicate pytest-results.json \
             --predicate-type "https://pytest.org/evidence/results/v1" \
@@ -466,7 +386,7 @@ jobs:
             --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
             --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Pytest evidence creation failed"
           
-          echo "✅ Creating SAST evidence with direct GitHub variable syntax..."  
+          echo "✅ Creating SAST evidence..."  
           jf evd create-evidence \
             --predicate sast-scan.json \
             --predicate-type "https://checkmarx.com/evidence/sast/v1.1" \
@@ -526,8 +446,7 @@ jobs:
               }
             }' > config-bundle.json
 
-          # Create evidence using direct JFrog CLI
-          echo "✅ Creating config evidence with direct GitHub variable syntax..."
+          echo "✅ Creating config evidence..."
           jf evd create-evidence \
             --predicate config-bundle.json \
             --predicate-type "https://in-toto.io/Statement/v0.1" \
